[package]
name = "lanzaboote"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
uefi = { version = "0.18.0", features = [ "alloc", "logger", "exts" ] }
uefi-services = "0.15.0"
log = "0.4.17"
ed25519-compact = { version = "2.0.2", default-features = false, features = [] }

[profile.release]
opt-level = "s"
lto = true
