[package]
name = "lanzaboote"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
uefi = { version = "0.18.0", default-features = false, features = [ "alloc", "exts" ] }
uefi-services = { version = "0.15.0", default-features = false, features = [ "panic_handler" ] }
log = "0.4.17"
ed25519-compact = { version = "2.0.2", default-features = false, features = [] }
goblin = { version = "0.6.0", default-features = false, features = [ "pe64", "alloc" ]}

# We don't want the assembly implementations for now.
blake3 = { version = "1.3.3", default-features = false, features = [ "pure" ]}

[profile.release]
opt-level = "s"
lto = true
