[package]
name = "lanzaboote_stub"
version = "0.3.0"
edition = "2021"
publish = false
# For UEFI target
rust-version = "1.68"

[dependencies]
uefi = { version = "0.21.0", default-features = false, features = [ "alloc", "global_allocator" ] }
uefi-services = { version = "0.18.0", default-features = false, features = [ "panic_handler", "logger" ] }
goblin = { version = "0.6.1", default-features = false, features = [ "pe64", "alloc" ]}
bitflags = "2.3.1"

# Even in debug builds, we don't enable the debug logs, because they generate a lot of spam from goblin.
log = { version = "0.4.18", default-features = false, features = [ "max_level_info", "release_max_level_warn" ]}

# Use software implementation because the UEFI target seems to need it.
sha2 = { version = "0.10.6", default-features = false, features = ["force-soft"] }
# SHA1 for TPM TCG interface version 1.
sha1_smol = "1.0.0"

[profile.release]
opt-level = "s"
lto = true
