[package]
name = "lanzaboote_stub"
version = "0.3.0"
edition = "2021"
publish = false
# For UEFI target
rust-version = "1.68"

[dependencies]
uefi = { version = "0.24.0", default-features = false, features = [ "alloc", "global_allocator" ] }
uefi-services = { version = "0.21.0", default-features = false, features = [ "panic_handler", "logger" ] }
# Even in debug builds, we don't enable the debug logs, because they generate a lot of spam from goblin.
log = { version = "0.4.19", default-features = false, features = [ "max_level_info", "release_max_level_warn" ]}
# Use software implementation because the UEFI target seems to need it.
sha2 = { version = "0.10.7", default-features = false, features = ["force-soft"], optional = true }
# Our linux-bootloader crate containing most of what we need
linux-bootloader = { path = "../linux-bootloader" }

[features]
default = [ "thin" ]
thin = ["dep:sha2"]
fat = []

[profile.release]
opt-level = "s"
lto = true
