[package]
name = "lanzaboote_tool"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lzbt"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.4", features = ["derive"] }
goblin = "0.6.1"
nix = { version = "0.26.2", default-features = false, features = [ "fs" ] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tempfile = "3.5.0"
bootspec = "0.1.0"
walkdir = "2.3.3"
time = "0.3.20"
sha2 = "0.10.6"
# Keep the fastrand version aligned with the one from tempfile to avoid two
# different versions.
fastrand = "1.9.0"
log = { version = "0.4.17", features = ["std"] }
stderrlog = "0.5.4"
indoc = "2.0.1"

[dev-dependencies]
assert_cmd = "2.0.11"
expect-test = "1.4.1"
filetime = "0.2.21"
rand = "0.8.5"
