[workspace]
resolver = "2"

members = [
    "stub",
    "pio",
    "linux-bootloader",
]

default-members = [
    "stub"
]

[workspace.package]
version = "0.4.1"

[profile.release]
opt-level = "s"
lto = true

[patch.crates-io]
uefi = { git = "https://github.com/rust-osdev/uefi-rs" }
uefi-services = { git = "https://github.com/rust-osdev/uefi-rs" }
