[workspace]
resolver = "3"

members = [
    "stub",
    "pio",
    "linux-bootloader",
]

default-members = [
    "stub"
]

[workspace.package]
version = "1.0.0"
edition = "2024"

[workspace.dependencies]
log = { version = "0.4.28", default-features = false }
uefi = { version = "0.36.1", default-features = false }

[profile.release]
opt-level = "s"
lto = true
