[package]
name = "lanzasignd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
stderrlog = "0.5.4"
log = { version = "0.4.18", features = ["std"] }
clap = { version = "4.3.1", features = ["derive"] }
lanzaboote_tool = { path = "../shared" }
tempfile = "3.5.0"
rouille = "3.6.2"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"

[dev-dependencies]
assert_cmd = "2.0.11"
expect-test = "1.4.1"
filetime = "0.2.21"
rand = "0.8.5"
serde_json = "1.0.96"
goblin = "0.6.1"
walkdir = "2.3.3"
sha2 = "0.10.6"
