[package]
name = "lanzaboote_tool"
version.workspace = true 
edition.workspace = true 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
goblin = "0.7"
serde_json = "1"
tempfile = "3.10.1"
bootspec = "1"
walkdir = "2"
time = "0.3"
sha2 = "0.10"
# Keep the fastrand version aligned with the one from tempfile to avoid two
# different versions.
fastrand = "2.0.2"
log = { version = "0.4", features = ["std"] }
