[package]
name = "lanzaboote_tool"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
log = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
tempfile = { workspace = true, features = ["default"]}
sha2 = { workspace = true, features = ["std"] }

bootspec = "2"
# Keep the fastrand version aligned with the one from tempfile to avoid two
# different versions.
fastrand = "2.3.0"
goblin.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
time = "0.3"
walkdir = "2"
