[package]
name = "lzbt-systemd"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
log = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
tempfile = { workspace = true, features = ["default"]}
sha2 = { workspace = true, features = ["std"] }

base32ct = { version = "0.3.0", features = ["alloc"] }
clap = { version = "4.5.51", features = ["derive"] }
indoc = "2.0.7"
lanzaboote_tool = { path = "../shared" }
nix = { version = "0.31.0", default-features = false, features = [ "fs" ] }
regex = "1.12.2"
stderrlog = "0.6.0"


[dev-dependencies]
assert_cmd = "2.1.1"
expect-test = "1.5.1"
filetime = "0.2.26"
goblin = "0.10.3"
rand = "0.10.0"
walkdir = "2.5.0"
