[package]
name = "linux-bootloader"
version.workspace = true
edition = "2021"
publish = true
license = "GPL-3.0-only"
keywords = ["osdev", "linux", "bootloader"]
categories = ["embedded", "hardware-support", "no-std", "os::linux-apis"]
description = "Utilities to build Linux-based bootloaders"
repository = "https://github.com/nix-community/lanzaboote/"
# For UEFI target
rust-version = "1.68"

[features]
# This way, `cargo test --no-default-features --target x86_64-unknown-linux-gnu`
# can be used to run unit tests. The global allocator of the `uefi` crate
# prevents unit tests from working.
default = ["rt"]
rt = ["uefi/global_allocator"]

[dependencies]
uefi = { version = "0.25.0", default-features = false, features = [ "alloc" ] }
# Update blocked by #237
goblin = { version = "=0.6.1", default-features = false, features = [ "pe64", "alloc" ]}
bitflags = "2.4.1"
once_cell = { version = "1.18.0", default-features = false, features = ["alloc"] }

# Even in debug builds, we don't enable the debug logs, because they generate a lot of spam from goblin.
log = { version = "0.4.20", default-features = false, features = [ "max_level_info", "release_max_level_warn" ]}

[badges]
maintenance = { status = "actively-developed" }
