[package]
name = "linux-bootloader"
version.workspace = true
edition = "2021"
publish = true
license = "GPL-3.0-only"
keywords = ["osdev", "linux", "bootloader"]
categories = ["embedded", "hardware-support", "no-std", "os::linux-apis"]
description = "Utilities to build Linux-based bootloaders"
repository = "https://github.com/nix-community/lanzaboote/"
# For UEFI target
rust-version = "1.68"

[dependencies]
uefi = { version = "0.26.0", default-features = false, features = [ "alloc", "global_allocator" ] }
# Update blocked by #237
goblin = { version = "=0.6.1", default-features = false, features = [ "pe64", "alloc" ]}
bitflags = "2.4.1"
pio = { path = "../pio" }

# Even in debug builds, we don't enable the debug logs, because they generate a lot of spam from goblin.
log = { version = "0.4.20", default-features = false, features = [ "max_level_info", "release_max_level_warn" ]}
embedded-io = { version = "0.6.1", default-features = false, features = [ "alloc" ] }

[badges]
maintenance = { status = "actively-developed" }
