[package]
name = "linux-bootloader"
version.workspace = true
edition.workspace = true
publish = true
license = "GPL-3.0-only"
keywords = ["osdev", "linux", "bootloader"]
categories = ["embedded", "hardware-support", "no-std", "os::linux-apis"]
description = "Utilities to build Linux-based bootloaders"
repository = "https://github.com/nix-community/lanzaboote/"
# For UEFI target
rust-version = "1.85"

[dependencies]
# Even in debug builds, we don't enable the debug logs, because they generate a lot of spam from goblin.
log = { workspace = true, features = [ "max_level_info", "release_max_level_warn" ]}

uefi = { workspace = true, default-features = false, features = [ "alloc", "global_allocator" ] }

bitflags = "2.10.0"
goblin = { version = "0.10", default-features = false, features = [ "pe64", "alloc" ]}

pio = { path = "../pio" }

[badges]
maintenance = { status = "actively-developed" }
