[package]
name = "pio"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-io = { version = "0.6.1", features = [ "alloc" ] }
snafu = { version = "0.8.2", default-features = false }

[dev-dependencies]
cpio = "0.4.0"
