[package]
name = "lanzaboote_stub"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
uefi = { version = "0.36.1", default-features = false, features = [ "alloc", "global_allocator", "panic_handler", "logger" ] }
# Even in debug builds, we don't enable the debug logs, because they generate a lot of spam from goblin.
log = { version = "0.4.28", default-features = false, features = [ "max_level_info", "release_max_level_warn" ]}
# Use software implementation because the UEFI target seems to need it.
sha2 = { version = "0.10.9", default-features = false, features = ["force-soft"] }
# Our linux-bootloader crate containing most of what we need
linux-bootloader = { path = "../linux-bootloader" }
