[package]
name = "lanzaboote_stub"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
# Even in debug builds, we don't enable the debug logs, because they generate a lot of spam from goblin.
log = { workspace = true, features = [ "max_level_info", "release_max_level_warn" ]}
uefi = { workspace = true, features = [ "alloc", "global_allocator", "panic_handler", "logger" ] }

# Use software implementation because the UEFI target seems to need it.
sha2 = { version = "0.10.9", default-features = false, features = ["force-soft"] }

# Our linux-bootloader crate containing most of what we need
linux-bootloader = { path = "../linux-bootloader" }
